Added some styling and menu content

--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html>
 <head>
 	<title>Ruchnius</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-Welcome to the holly holly site
+<h3>*Ruchnius*</h3>
+<div>
+	<h4>Religious Recordings</h4>
+	<ul>
+		<li>Chabad</li>
+		<li>Hari Krishna</li>
+		<li>Christian</li>
+		<li>Islam</li>
+	</ul>
+</div>
 </body>
 </html>
